# RLRPG

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  enemy.cpp  gen_map.cpp  hero.cpp  inventory.cpp  item.cpp  level.cpp  log.cpp  log.txt  main.cpp  map.me  map_editor.cpp  me  testfile.txt  tips.txt  todos.txt  unit.cpp
data/: items.yaml
data/items/: apple.yaml  blue_potion.yaml  bronze_spear.yaml  chain_chestplate.yaml  copper_shortsword.yaml  dark_potion.yaml  egg.yaml  green_potion.yaml  identify_scroll.yaml  leather_chestplate.yaml  magenta_potion.yaml  map.yaml  musket.yaml  pickaxe.yaml  pistol.yaml  shotgun.yaml  shotgun_bullets.yaml  steel_bullets.yaml  stick.yaml  yellow_potion.yaml
data/units/: enemies.yaml  hero.yaml
data/units/enemies/: barbarian.yaml  guardian.yaml  zombie.yaml
include/: abstract_item_loader.hpp  abstract_unit_loader.hpp  array2d.hpp  colors.hpp  controls.hpp  direction.hpp  enable_clone.hpp  enemy.hpp  game.hpp  game_map.hpp  gen_map.hpp  globals.hpp  hero.hpp  inventory.hpp  inventory.inl  inventory_iterator.hpp  item.hpp  item_list_formatters.hpp  level.hpp  level_data.hpp  log.hpp  ptr.hpp  registry.hpp  render_data.hpp  unit.hpp  utils.hpp  yaml_file_cache.hpp  yaml_item_loader.hpp  yaml_unit_loader.hpp
include/items/: ammo.hpp  armor.hpp  food.hpp  item.hpp  potion.hpp  scroll.hpp  weapon.hpp
include/meta/: check.hpp
include/termlib/: abstract_terminal_window.hpp  default_window_provider.hpp  ncurses_color_pair.hpp  ncurses_terminal_window.hpp  terminal_color.hpp  terminal_reader.hpp  terminal_renderer.hpp  terminal_text_style.hpp  termlib.hpp  vec2.hpp
include/units/: enemy.hpp  hero.hpp  unit.hpp
src/: enemy.cpp  game.cpp  gen_map.cpp  hero.cpp  inventory.cpp  item.cpp  item_list_formatters.cpp  log.cpp  main.cpp  potion.cpp  unit.cpp  utils.cpp  weapon.cpp  yaml_file_cache.cpp  yaml_item_loader.cpp  yaml_unit_loader.cpp
termlib/: default_window_provider.cpp
